--- a/Assigment 1/Shared/MainLayout.razor
+++ b/Assigment 1/Shared/MainLayout.razor
@@ -1,4 +1,7 @@
+@using LoginComponent
+
 @inherits LayoutComponentBase
+
 
 <div class="page">
     <div class="sidebar">
@@ -7,11 +10,12 @@
 
     <div class="main">
         <div class="top-row px-4">
+            <Login/>
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
-
         <div class="content px-4">
             @Body
         </div>
     </div>
 </div>
+
