--- a/Assigment 1/Shared/NavMenu.razor
+++ b/Assigment 1/Shared/NavMenu.razor
@@ -22,6 +22,13 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
+        <AuthorizeView Policy="SecurityLevel4">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="Security">
+                    <span class="oi oi-lock-unlocked" aria-hidden="true"></span> Security
+                </NavLink>
+            </li>
+        </AuthorizeView>
     </ul>
 </div>
 
