--- a/Assigment 1/Pages/Login.razor
+++ b/Assigment 1/Pages/Login.razor
@@ -6,16 +6,17 @@
 
 <AuthorizeView>
     <NotAuthorized>
-        <div class="form-group">
+        <div>
             <label>User name:</label> <input type="text" placeholder="user name" @bind-value="username"/>
         </div>
-        <div class="form-group">
+        <div>
             <label>Password</label> <input type="password" placeholder="password" @bind-value="password"/>
         </div>
         <div style="color:red">@errorMessage</div> <a href="" @onclick="PerformLogin"> Login </a>
+        <div style="color:green">@errorMessage</div> <a href="" @onclick="PerformRegister"> Register </a>
     </NotAuthorized>
     <Authorized>
-        <a href="" @onclick="PerformLogout"> Log out </a>
+        <a href="" @onclick="PerformLogout"> Log out, @context.User.Identity.Name </a>
     </Authorized>
 </AuthorizeView>
 
@@ -53,6 +54,11 @@
         catch (Exception e)
         {
         }
+    }
+
+    private void PerformRegister()
+    {
+        NavigationManager.NavigateTo("/register");
     }
 
 }
