--- a/Assigment 1/Pages/Register.razor
+++ b/Assigment 1/Pages/Register.razor
@@ -48,12 +48,8 @@
     
     private void Save()
     {
-        Console.WriteLine(User.Domain);
-        Console.WriteLine(User.Password);
-        Console.WriteLine(User.UserName);
-        Console.WriteLine(User.SecurityLevel);
-    //UserService.Save(User);
-    // NavigationManager.NavigateTo("/Login");
+        UserService.Save(User);
+    NavigationManager.NavigateTo("/Login");
     }
 
 }
