CSS on adult add

--- a/Assigment 1/Pages/AdultPage.razor
+++ b/Assigment 1/Pages/AdultPage.razor
@@ -7,7 +7,9 @@
 @inject IAdultService AdultService
 @inject NavigationManager NavigationManager;
 <h3>Adult Info Page</h3>
-
+<head>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
+</head>
 
 <div class="@mainClass">
     <label for="fname">First name:</label><br>
