--- a/Assigment 1/Pages/Index.razor
+++ b/Assigment 1/Pages/Index.razor
@@ -4,31 +4,61 @@
 @inject IAdultService AdultService
 @inject NavigationManager NavigationManager;
 
-<h1>Add New Adult</h1>
-<p>@ErrorMessage</p>
 
-<label for="fname">First name:</label><br>
-<input type="text" @bind="@FirstName" @oninput="@((e) => { FirstName = (string) e.Value; })"><br>
-<label for="lname">Last name:</label><br>
-<input type="text" @bind="@LastName" @oninput="@((e) => { LastName = (string) e.Value; })"><br>
-<label for="lname">HairColor:</label><br>
-<input type="text" @bind="@HairColor" @oninput="@((e) => { HairColor = (string) e.Value; })"><br>
-<label for="lname">EyeColor:</label><br>
-<input type="text" @bind="@EyeColor" @oninput="@((e) => { EyeColor = (string) e.Value; })"><br>
-<label for="lname">Age:</label><br>
-<input type="text" @bind="@Age" @oninput="@((e) => { Age = (string) e.Value; })"><br>
-<label for="lname">Weight:</label><br>
-<input type="text" @bind="@Weight" @oninput="@((e) => { Weight = (string) e.Value; })"><br>
-<label for="lname">Height:</label><br>
-<input type="text" @bind="@Height" @oninput="@((e) => { Height = (string) e.Value; })"><br>
-<label for="lname">Sex:</label><br>
-<input type="text" @bind="@Sex" @oninput="@((e) => { Sex = (string) e.Value; })"><br>
-<label for="lname">JobTitle:</label><br>
-<input type="text" @bind="@JobTitle" @oninput="@((e) => { JobTitle = (string) e.Value; })"><br>
-<label for="lname">Salary:</label><br>
-<input type="text" @bind="@Salary" @oninput="@((e) => { Salary = (string) e.Value; })"><br>
-<input type="submit" value="Submit" @onclick="Edit">
+<head>
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
+    <link rel="stylesheet" href="css/custom/customCss.css"/>
+</head>
 
+<div class="container p-3 my-3">
+
+    <h1>Add New Adult</h1>
+    <p>@ErrorMessage</p>
+
+    <div class="form__group field">
+        <input type="text" class="form__field" placeholder="fName" name="fname" id='fname' required @bind="@FirstName" @oninput="@((e) => { FirstName = (string) e.Value; })" />
+        <label for="fname" class="form__label">First name:</label>
+    </div>
+    <div class="form__group field">
+        <input type="text" class="form__field" placeholder="lName" name="lname" id='lname' required @bind="@LastName" @oninput="@((e) => { LastName = (string) e.Value; })"/>
+        <label for="lname" class="form__label">Last name:</label>
+    </div>
+    <div class="form__group field">
+        <input type="text" class="form__field" placeholder="hairColour" name="hairColour" id='hairColour' required @bind="@HairColor" @oninput="@((e) => { HairColor = (string) e.Value; })"/>
+        <label for="hairColour" class="form__label">Hair colour:</label>
+    </div>
+    <div class="form__group field">
+        <input type="text" class="form__field" placeholder="eyeColour" name="eyeColour" id='eyeColour' required @bind="@EyeColor" @oninput="@((e) => { EyeColor = (string) e.Value; })" />
+        <label for="eyeColour" class="form__label">Eye colour:</label>
+    </div>
+    <div class="form__group field">
+        <input type="text" class="form__field" placeholder="age" name="age" id='age' required @bind="@Age" @oninput="@((e) => { Age = (string) e.Value; })"/>
+        <label for="age" class="form__label">Age:</label>
+    </div>
+    <div class="form__group field">
+        <input type="text" class="form__field" placeholder="weight" name="weight" id='weight' required @bind="@Weight" @oninput="@((e) => { Weight = (string) e.Value; })"/>
+        <label for="weight" class="form__label">Weight:</label>
+    </div>
+    <div class="form__group field">
+        <input type="text" class="form__field" placeholder="height" name="height" id='height' required @bind="@Height" @oninput="@((e) => { Height = (string) e.Value; })"/>
+        <label for="height" class="form__label">Height:</label>
+    </div>
+    <div class="form__group field">
+        <input type="text" class="form__field" placeholder="sex" name="sex" id='sex' required @bind="@Sex" @oninput="@((e) => { Sex = (string) e.Value; })" />
+        <label for="sex" class="form__label">Sex:</label>
+    </div>
+    <div class="form__group field">
+        <input type="text" class="form__field" placeholder="jobTitle" name="jobTitle" id='jobTitle' required @bind="@JobTitle" @oninput="@((e) => { JobTitle = (string) e.Value; })"/>
+        <label for="jobTitle" class="form__label">Job title:</label>
+    </div>
+    <div class="form__group field">
+        <input type="text" class="form__field" placeholder="salary" name="salary" id='salary' required @bind="@Salary" @oninput="@((e) => { Salary = (string) e.Value; })"/>
+        <label for="salary" class="form__label">Salary:</label>
+    </div>
+    <div class="wrap">
+        <input id="submitButton" type="submit" value="Submit" @onclick="Edit">
+    </div>
+</div>
 @code {
     public string ErrorMessage { get; set; }
     public IList<Adult> Adults { get; set; }
