--- a/Assigment 1/Pages/FetchData.razor
+++ b/Assigment 1/Pages/FetchData.razor
@@ -1,6 +1,10 @@
 ﻿@page "/fetchdata"
 
 @using Assigment_1.Data
+@using ChartJs.Blazor
+@using ChartJs.Blazor.Common
+@using ChartJs.Blazor.PieChart
+@using ChartJs.Blazor.Util
 @using Models
 @inject IAdultService AdultService
 @inject NavigationManager NavigationManager;
@@ -20,7 +24,7 @@
 }
 else
 {
-    <table class="table">
+    <table class="table" id="datatable">
         <thead>
         <tr>
             <th>FirstName</th>
@@ -51,12 +55,14 @@ else
         }
         </tbody>
     </table>
+    <Chart Config="_config"></Chart>
 }
 
 @code
 {
     [CascadingParameter]
     protected Task<AuthenticationState> AuthStat { get; set; }
+
     public string SearchPhrase;
     public IList<Adult> Adults { get; set; }
 
@@ -74,6 +80,7 @@ else
             Console.WriteLine("2str");
             Adults = AdultService.AdultsList;
         }
+        CreatePie();
     }
 
     private void NavigateToComponent(Adult p)
@@ -85,5 +92,53 @@ else
     {
         NavigationManager.NavigateTo("SearchResult/" + SearchPhrase);
         Console.WriteLine("Hello");
+    }
+
+
+    private PieConfig _config;
+
+    private void CreatePie()
+    {
+        _config = new PieConfig
+        {
+            Options = new PieOptions
+            {
+                Responsive = true,
+                Title = new OptionsTitle
+                {
+                    Display = true,
+                    Text = "Male to Female Ratio"
+                }
+            }
+        };
+
+        foreach (string color in new[] {"Male", "Female"})
+        {
+            _config.Data.Labels.Add(color);
+        }
+
+        int male = 0;
+        int female = 0;
+        foreach (var adult in Adults)
+        {
+            if (adult.Sex.Equals("M"))
+            {
+                male += 1;
+            }
+            else
+            {
+                female += 1;
+            }
+        }
+
+        PieDataset<int> dataset = new PieDataset<int>(new[] {male, female})
+        {
+            BackgroundColor = new[]
+            {
+                ColorUtil.ColorHexString(255, 99, 132),
+                ColorUtil.ColorHexString(255, 205, 86),
+            }
+        };
+        _config.Data.Datasets.Add(dataset);
     }
 }
