--- a/Assigment 1/Pages/_Host.cshtml
+++ b/Assigment 1/Pages/_Host.cshtml
@@ -31,5 +31,8 @@
 </div>
 
 <script src="_framework/blazor.server.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+<script src="_content/ChartJs.Blazor.Fork/ChartJsBlazorInterop.js"></script>
 </body>
 </html>
