--- a/Assigment 1/Pages/SearchResult.razor
+++ b/Assigment 1/Pages/SearchResult.razor
@@ -4,11 +4,15 @@
 
 
 @using Assigment_1.Data
+@using ChartJs.Blazor
+@using ChartJs.Blazor.Common
+@using ChartJs.Blazor.PieChart
+@using ChartJs.Blazor.Util
 @using Models
 @inject IAdultService AdultService
 @inject NavigationManager NavigationManager;
 
-<h1>Adults List</h1>
+<a href="fetchdata">Adults List</a>
 
 @if (AdultsSearched == null)
 {
@@ -50,6 +54,7 @@ else
         }
         </tbody>
     </table>
+    <Chart Config="_config"></Chart>
 }
 
 
@@ -59,6 +64,7 @@ else
     [Parameter]
     public string Id { get; set; }
     public IList<Adult> Adults { get; set; }
+    private PieConfig _config;
     public IList<Adult> AdultsSearched = new List<Adult>();
 
     protected override async Task OnInitializedAsync()
@@ -71,10 +77,57 @@ else
                 AdultsSearched.Add(adult);
             }
         }
+        CreatePie();
     }
 
     private void NavigateToComponent(Adult p)
     {
         NavigationManager.NavigateTo("AdultPage/" + p.Id);
+    }
+    
+    
+    private void CreatePie()
+    {
+        _config = new PieConfig
+        {
+            Options = new PieOptions
+            {
+                Responsive = true,
+                Title = new OptionsTitle
+                {
+                    Display = true,
+                    Text = "Male to Female Ratio"
+                }
+            }
+        };
+
+        foreach (string color in new[] {"Male", "Female"})
+        {
+            _config.Data.Labels.Add(color);
+        }
+
+        int male = 0;
+        int female = 0;
+        foreach (var adult in AdultsSearched)
+        {
+            if (adult.Sex.Equals("M"))
+            {
+                male += 1;
+            }
+            else
+            {
+                female += 1;
+            }
+        }
+
+        PieDataset<int> dataset = new PieDataset<int>(new[] {male, female})
+        {
+            BackgroundColor = new[]
+            {
+                ColorUtil.ColorHexString(255, 99, 132),
+                ColorUtil.ColorHexString(255, 205, 86),
+            }
+        };
+        _config.Data.Datasets.Add(dataset);
     }
 }
