--- a/Assigment 1/Shared/NavMenu.razor
+++ b/Assigment 1/Shared/NavMenu.razor
@@ -13,8 +13,8 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="addnew">
+                <span class="oi oi-plus" aria-hidden="true"></span> Add New
             </NavLink>
         </li>
         <li class="nav-item px-3">
@@ -22,11 +22,6 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
-           <li class="nav-item px-3">
-                    <NavLink class="nav-link" href="addnew">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Add New
-                    </NavLink>
-                </li>
         <AuthorizeView Policy="SecurityLevel4">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="Security">
