--- a/Assigment 1/Pages/AddNew.razor
+++ b/Assigment 1/Pages/AddNew.razor
@@ -1,4 +1,5 @@
 ﻿@page "/AddNew"
+@attribute [Authorize(Policy = "SecurityLevel2")]
 @using Assigment_1.Data
 @using Models
 @inject IAdultService AdultService
