--- a/Assigment 1/Shared/NavMenu.razor
+++ b/Assigment 1/Shared/NavMenu.razor
@@ -13,15 +13,17 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Show adults
             </NavLink>
         </li>
+        <AuthorizeView Policy="LoggedIn">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="AddAdult">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Add Adult
+                </NavLink>
+            </li>
+        </AuthorizeView>
         <AuthorizeView Policy="SecurityLevel4">
             <li class="nav-item px-3">
                 <NavLink class="nav-link" href="Security">
