--- a/Assigment 1/Pages/Login.razor
+++ b/Assigment 1/Pages/Login.razor
@@ -10,7 +10,7 @@
             <label>User name:</label> <input type="text" placeholder="user name" @bind-value="username"/>
         </div>
         <div>
-            <label>Password</label> <input type="password" placeholder="password" @bind-value="password"/>
+            <label>Password:</label> <input type="password" placeholder="password" @bind-value="password"/>
         </div>
         <div style="color:red">@errorMessage</div>
         <a href="" @onclick="PerformLogin"> Login </a>
