--- a/Assigment 1/wwwroot/css/site.css
+++ b/Assigment 1/wwwroot/css/site.css
@@ -18,10 +18,6 @@ a, .btn-link {
     padding-top: 1.1rem;
 }
 
-tr:hover {
-    background: red;
-}
-
 .valid.modified:not([type=checkbox]) {
     outline: 1px solid #26b050;
 }
@@ -60,5 +56,9 @@ tr:hover {
 
 .hidden{
     display: none;
+}
+
+.onHoverChange:hover{
+    background: red;
 }
 
