--- a/Assigment 1/Pages/AdultPage.razor
+++ b/Assigment 1/Pages/AdultPage.razor
@@ -36,11 +36,11 @@
     </div>
 </div>
 <div class="@secondaryClass">
+   <p>Are you sure you want to delete @Adult.FirstName @Adult.LastName</p>
     <div >
         <input type="submit" value="Confirm" @onclick="Confirm">
-    </div>
-    <div>
-        //<input type="submit" value="GoBack" @onclick="Remove">
+
+        <input type="submit" value="GoBack" @onclick="Remove">
     </div>
 </div>
 
@@ -48,7 +48,7 @@
 
 
     string mainClass { get; set; }
-    string secondaryClass   { get; set; }
+    string secondaryClass { get; set; }
 
     [Parameter]
     public int Id { get; set; }
@@ -78,7 +78,7 @@
 
     private void Remove()
     {
-        Console.WriteLine(mainClass+"sasad");
+        Console.WriteLine(mainClass + "sasad");
         if (!mainClass.Equals("hidden"))
         {
             secondaryClass = "";
@@ -93,7 +93,6 @@
 
     private void Confirm()
     {
-       
         AdultService.Remove(Adult.Id);
         mainClass = "";
         NavigationManager.NavigateTo("/fetchdata");
