3 User log in too fast

--- a/Assigment 1/Pages/AddNew.razor
+++ b/Assigment 1/Pages/AddNew.razor
@@ -77,8 +77,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Adults =  await CloudAdultInterface.GetAdultAsync();
-       
+        Adults = await CloudAdultInterface.GetAdultAsync();
     }
 
     public async void Edit()
@@ -119,7 +118,7 @@
                 };
                 adult.JobTitle = job;
             }
-            
+
             await CloudAdultInterface.AddAdultAsync(adult);
             NavigationManager.NavigateTo("/fetchdata");
         }
@@ -127,7 +126,7 @@
 
     public bool Check(string s)
     {
-        return (s == null || s == String.Empty) ? true : false;
+        return string.IsNullOrEmpty(s) ? true : false;
     }
 
 }
