--- a/Assigment 1/Pages/Login.razor
+++ b/Assigment 1/Pages/Login.razor
@@ -26,15 +26,15 @@
     private string username;
     private string password;
     private string errorMessage;
-
-    public async Task PerformLogin()
+    
+    
+    private async Task PerformLogin()
     {
         errorMessage = "";
         try
         {
             
-            ((CustomAuthenticationStateProvider) AuthenticationStateProvider).ValidateLogin(username, password);
-            //Thread.Sleep(10);
+            await ((CustomAuthenticationStateProvider) AuthenticationStateProvider).ValidateLogin(username, password);
             username = "";
             password = "";
             NavigationManager.NavigateTo("/fetchdata");
